[package]
name = "theca"
version = "0.1.0"
edition = "2021"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
description = "Theca (`box` in latin) is a container system built in Rust"
readme = "README.md"
repository = "https://github.com/LuisCardosoOliveira/theca"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
